--- a/package.json
+++ b/package.json
@@ -2,15 +2,40 @@
   "name": "analog-nx-repo",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/animations": "~15.1.0",
+    "@angular/common": "~15.1.0",
+    "@angular/compiler": "~15.1.0",
+    "@angular/core": "~15.1.0",
+    "@angular/forms": "~15.1.0",
+    "@angular/platform-browser": "~15.1.0",
+    "@angular/platform-browser-dynamic": "~15.1.0",
+    "@angular/router": "~15.1.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "nx": "15.6.3",
+    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular/cli": "~15.1.0",
+    "@angular/compiler-cli": "~15.1.0",
+    "@angular/language-service": "~15.1.0",
+    "@nrwl/angular": "^15.6.3",
+    "@nrwl/cypress": "15.6.3",
+    "@nrwl/jest": "15.6.3",
     "@nrwl/workspace": "15.6.3",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "cypress": "^12.2.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "~12.2.3",
+    "nx": "15.6.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.8.2"
   }
 }
